# cpl_tmpl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/cpl_tmpl/: config.h  context.h  data_provider.h  template.h  traits.h  version.h
lib/cpl_tmpl/: data_provider.cpp  lex.cpp  lex.h  parse.cpp  parse.h  str_utils.h
lib/cpl_tmpl/interp/: ast.cpp  ast.h  ops.cpp  ops.h  template.cpp  template.h
tests/: CMakeLists.txt  data_provider.cpp  json.cpp  lexer.cpp  simple_templates.cpp  str_utils.cpp
